--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -1,10 +1,10 @@
-name: AWS CDK Synth
+name: Test Pull Request
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
-  push:
-    branches: ["main"]
+  pull_request:
+    branches:
+      - main
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -17,6 +17,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: CDK Synth
+        working-directory: ./infra
         uses: scottbrenner/aws-cdk-action@v1.6.4
         with:
           args: synth
