--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -16,8 +16,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - uses: docker/build-push-action@v2
+        with:
+          context: ./infra
+
       - name: CDK Synth
-        working-directory: ./infra
         uses: scottbrenner/aws-cdk-action@v1.6.4
         with:
           args: synth
