--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -23,6 +23,9 @@ jobs:
         working-directory: ./infra
         run: cdk synth
         env:
+          AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
+          STATIC_SITE_BUCKET: ${{ secrets.STATIC_SITE_BUCKET }}
+          REDIRECT_SITE_BUCKET: ${{ secrets.REDIRECT_SITE_BUCKET }}
