--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -1,10 +1,10 @@
-name: AWS CDK Synth
+name: Test Pull Request
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
-  push:
-    branches: ["main"]
+  pull_request:
+    branches:
+      - main
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -16,11 +16,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: CDK Synth
-        uses: scottbrenner/aws-cdk-action@v1.6.4
-        with:
-          args: synth
+      - name: Install AWS CDK
+        run: npm install -g aws-cdk
+
+      - name: CDK Synth in infra directory
+        working-directory: ./infra
+        run: cdk synth
         env:
+          AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
+          STATIC_SITE_BUCKET: ${{ secrets.STATIC_SITE_BUCKET }}
+          REDIRECT_SITE_BUCKET: ${{ secrets.REDIRECT_SITE_BUCKET }}
