--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -1,15 +1,23 @@
 name: Test Pull Request
 
-# Controls when the workflow will run
 on:
   pull_request:
     branches:
       - main
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
 
 jobs:
-  aws-cdk-synth:
+  test-front:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install dependencies
+        run: npm ci
+      - name: Test formatting
+        run: npm run lint:format
+  test-infra:
     runs-on: ubuntu-latest
 
     steps:
