--- a/front/package.json
+++ b/front/package.json
@@ -7,6 +7,8 @@
         "lint:format:fix": "prettier --write .",
         "lint:style": "stylelint '**/*.{scss,astro}'",
         "lint:style:fix": "stylelint --fix '**/*.{scss,astro}'",
+        "lint:code": "eslint --fix 'src/**/*.{js,ts,astro}'",
+        "lint:code:fix": "eslint --fix 'src/**/*.{js,ts,astro}'",
         "dev": "astro dev",
         "start": "astro dev",
         "build": "astro check && astro build",
@@ -23,6 +25,10 @@
         "typescript": "^5.6.3"
     },
     "devDependencies": {
+        "@typescript-eslint/parser": "^8.11.0",
+        "eslint": "^9.13.0",
+        "eslint-plugin-astro": "^1.3.0",
+        "eslint-plugin-jsx-a11y": "^6.10.1",
         "postcss-html": "^1.7.0",
         "prettier": "^3.3.3",
         "prettier-plugin-astro": "^0.14.1",
