--- a/.github/workflows/deploy-infra.yml
+++ b/.github/workflows/deploy-infra.yml
@@ -21,10 +21,9 @@ jobs:
       - name: Install AWS CDK
         run: npm install -g aws-cdk
 
-      - name: Change directory to infra
-        run: cd ./infra
-      - name: CDK Synth in infra directory
+      - name: deploy CDK app
         run: cdk deploy --require-approval never
+        working-directory: ./infra
         env:
           AWS_ACCOUNT_ID: ${{ secrets.AWS_ACCOUNT_ID }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -34,11 +33,12 @@ jobs:
           REDIRECT_SITE_BUCKET: ${{ secrets.REDIRECT_SITE_BUCKET }}
 
       # redeploy frontend because the bucket might have been emptied
-      - name: Change directory to front
-        run: cd ./front
       - name: Install dependencies
+        working-directory: ./front
         run: npm ci
       - name: Build the app
+        working-directory: ./front
         run: npm run build
       - name: Sync the bucket
+        working-directory: ./front
         run: aws s3 sync ./dist s3://${{ secrets.S3_BUCKET_NAME }} --delete
